--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 DEBUGBAR_ENABLED=false
+DEBUGBAR_CAPTURE_AJAX=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
