--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@vitejs/plugin-vue": "^3.2.0",
         "bootstrap-icons": "^1.8.3",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.13.2",
-        "sweetalert2": "^11.4.26"
+        "sweetalert2": "^11.4.26",
+        "swiper": "^8.4.4",
+        "vue": "^3.2.37"
     }
 }
